@@ -18,6 +18,8 @@
 //   call (which returns the promise itself by default)
 // * near(ref) has been changed to Promise.valueOf() in
 //   keeping with JavaScript's existing Object.valueOf().
+// * post(promise, name, args) has been altered to a variadic
+//   post(promise, name ...args)
 // * variadic arguments are used internally where
 //   applicable. However, I have not altered the Q.post()
 //   API to expand variadic arguments since Tyler Close
@@ -258,7 +260,8 @@ function ref(object) {
         "delete": function (name) {
             delete object[name];
         },
-        "post": function (name, args) {
+        "post": function (name /*...args*/) {
+            var args = Array.prototype.slice.call(arguments, 1);
             return object[name].apply(object, args);
         }
     }, undefined, function valueOf() {
@@ -377,7 +380,7 @@ exports.del = Method("del");
  * Invokes a method in a future turn.
  * @param object    promise or immediate reference for target object
  * @param name      name of method to invoke
- * @param argv      array of invocation arguments
+ * @param ...args   array of invocation arguments
  * @return promise for the return value
  */
 exports.post = Method("post");
