@@ -1,4 +1,8 @@
 
+Next
+ - Changed post(ref, name, args) to variadic
+   post(ref, name, ...args)
+
 0.1.8
  - Fixed isResolved(null) and isResolved(undefined) [issue #9]
  - Fixed a problem with the Object.create shim
